Changes since 0.2.0
1. src/curl-module.c: removed "ifdef"s from the code and replaced them
   by tests against the curl version.  The reason for this is that
   what appear to be macros are actually enums.
2. src/curl-module.c: A couple of constants were defined with a
   trailing space.

Changes since 0.1.2
1. src/curl-module.c: Added curl_easy_escape/unescape intrinsics
   (Brian McQueen mcqueenorama at gmail, com)
2. src/curl-module.c: Added CURL_NETRC_* constants.
3. demo/translate: Modified to use curl_easy_escape (Brian McQueen).
4. src/curl-module.c: CURL_NETRC_REQUIRED had the wrong value (Paul
   Boekholt).
5. src/curl-module.c: Added the CURLE_* constants and curl_easy_strerror
   to convert these to their string representations.
6. autoconf/aclocal.m4: CYGWIN updates
7. src/Makefile.in: added datarootdir definition
8. src/Makefile.in: Add documentation install targets

Changes since 0.1.1
1. src/curl-module.c: Add #ifdef CURLOPT_SOURCE_* since these
   constants are not always defined.

Changes since 0.1.0
1. src/Makefile.in: Create the help directory if it does not already
   exist. Paul Boekholt (p.boekholt at hetnet, nl).
2. autoconf/configure.ac: remove call to JD_SET_RPATH
3. added the translate script to the demo directory.
